[package]
name = "ft6x36"
version = "0.3.0"
edition = "2021"
categories = ["embedded", "hardware-support"]
description = "Rust driver for Ft6x36 touch screen"
repository = "https://github.com/pyaillet/ft6x36-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [ "event_process" ]
event_process = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = { version = "^0.2" }
num_enum = { version = "0.5.6", default-features = false }
